--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,8 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
     "postgres": "^3.4.5",
