--- a/server/package.json
+++ b/server/package.json
@@ -26,11 +26,15 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "postgres": "^3.4.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -42,6 +46,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
